finished board/* api and improved error handling
