# backend/src/rest-api/controllers/board.controller.ts
@@ -1,13 +1,21 @@
 import { Handler } from 'express';
-import { getBoardsService, getBoardService, BoardServiceError } from '../services/board.service';
+import { findBoards, findBoard } from '../services/board.service';
 import { ClientRequestError } from '../../services/error-handler.service';
+import { prepareFilter } from '../services/helper.service';
+import { ServiceError } from '../services/common.service';
 
 export const getBoards: Handler = async (req, res, next) => {
   try {
-    const boards = await getBoardsService();
+    const filterString = (<any>req).swagger.params.filter.value as string;
+    const sort = (<any>req).swagger.params.sort.value || null;
+    const offset = (<any>req).swagger.params.offset.value || 0;
+    const limit = (<any>req).swagger.params.limit.value || 0;
+    const filter = filterString ? prepareFilter(filterString) : {};
+
+    const boards = await findBoards(filter, sort, limit, offset);
     res.json(boards);
   } catch (err) {
-    if (err instanceof BoardServiceError) {
+    if (err instanceof ServiceError) {
       next(new ClientRequestError(err.message))
     } else {
       next(err);
@@ -20,10 +28,10 @@ export const getBoard: Handler = async (req, res, next) => {
     const id = (<any>req).swagger.params.boardId.value as string;
     const addCellFunctions = (<any>req).swagger.params.modifier && (<any>req).swagger.params.modifier.value === 'add-cell-functions';
 
-    const board = await getBoardService(id, addCellFunctions);
+    const board = await findBoard(id, addCellFunctions);
     res.json(board);
   } catch (err) {
-    if (err instanceof BoardServiceError) {
+    if (err instanceof ServiceError) {
       next(new ClientRequestError(err.message))
     } else {
       next(err);
